Fix display of search bar on mobile with dark theme

--- a/css/dark_theme.css
+++ b/css/dark_theme.css
@@ -79,3 +79,10 @@ header.logo {
 #login:before {
     background-image: linear-gradient(275deg, #103c68, #0073a7);
 }
+
+@media (max-width: 767px){
+    #searchInput:read-write:focus {
+       background: linear-gradient(to right, #0bcdc7 0%, var(--main-blue-color) 100%);
+    }
+}
+
